--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 * { box-sizing: border-box; }
 body { font-family: Arial; background: #0f172a; color: #e5e7eb; padding: 20px; }
 input, button, select { width: 100%; padding: 10px; margin: 6px 0; font-size: 16px; }
-button { background: #2563eb; color: white; border: none; border-radius: 6px; }
+button { background: #2563eb; color: white; border: none; border-radius: 6px; cursor: pointer; }
 button.reset { background: #dc2626; }
 .card { background: #020617; padding: 15px; border-radius: 10px; margin-bottom: 15px; }
 .log { border-top: 1px solid #334155; margin-top: 10px; padding-top: 10px; }
@@ -59,6 +59,7 @@ small { color: #94a3b8; }
 <button class="reset" onclick="endRun()">End Of Run</button>
 
 <script>
+/* ===== STATE ===== */
 let lines = [];
 let currentLine = "";
 let lastCount = null;
@@ -67,19 +68,68 @@ let runStartTime = null;
 let lastRun = {}; // per line
 const SERVER_URL = "https://cases.hytalesanarchy.com";
 
+/* ===== DOM ===== */
 const lineSelect = document.getElementById("lineSelect");
 const materialInput = document.getElementById("material");
 const startCountInput = document.getElementById("startCount");
 const timeInput = document.getElementById("time");
 const countInput = document.getElementById("count");
 
+/* ===== LIVE CLOCK ===== */
 function updateClock() {
   const now = new Date();
   document.getElementById("liveTime").innerHTML =
     `<small>${now.toDateString()} (${now.toLocaleTimeString([], {hour:'numeric', minute:'2-digit'})})</small>`;
 }
-setInterval(updateClock, 60000); updateClock();
+setInterval(updateClock, 60000);
+updateClock();
 
+/* ===== PASSWORD PROMPT ===== */
+async function getPassword(promptMsg = "Enter password:") {
+  const pw = prompt(promptMsg);
+  if (!pw) throw new Error("Password required");
+  return pw;
+}
+
+/* ===== SERVER COMMUNICATION ===== */
+async function sendToServer(entry = {}, reset = false, line = "", action = "add", requirePassword = true) {
+  if (!line) {
+    alert("No line selected!");
+    return { error: "No line selected" };
+  }
+
+  let password = "";
+  if (requirePassword) {
+    try {
+      password = await getPassword();
+    } catch (err) {
+      alert("Password is required for this action.");
+      return { error: "Password required" };
+    }
+  }
+
+  try {
+    const res = await fetch(`${SERVER_URL}/add`, {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({ entry, reset, line, action, password })
+    });
+
+    if (res.status === 403) {
+      alert("Wrong password!");
+      return { error: "Forbidden" };
+    }
+
+    const data = await res.json();
+    await loadLog(); // refresh log immediately after success
+    return data;
+  } catch (err) {
+    alert("Server unreachable");
+    return { error: "Server unreachable" };
+  }
+}
+
+/* ===== LOAD LOG ===== */
 async function loadLog() {
   try {
     const res = await fetch(`${SERVER_URL}/log.json?${Date.now()}`);
@@ -87,11 +137,23 @@ async function loadLog() {
     populateLines(data);
     displayLog(data);
     updateLastRunInfo(data);
+
+    // Detect active run for current line
+    if (currentLine) {
+      const activeStart = data.find(e => e.line === currentLine && e.time === "Start");
+      if (activeStart) {
+        runStartTime = new Date();
+        lastCount = activeStart.count;
+        material = activeStart.material;
+        updateSummary();
+      }
+    }
   } catch {
     document.getElementById("log").innerHTML = "<small>Server not reachable.</small>";
   }
 }
 
+/* ===== LINES ===== */
 function populateLines(data) {
   lines = [...new Set(data.map(e => e.line))].filter(Boolean);
   const old = lineSelect.value;
@@ -106,106 +168,133 @@ function populateLines(data) {
 function lineChanged() {
   currentLine = lineSelect.value;
   lastCount = null; material = ""; runStartTime = null;
-  document.getElementById("summary").innerHTML = "<small>Waiting for run...</small>";
+  updateSummary();
   displayLog([]);
   updateLastRunInfo();
 }
 
-function addLine() {
+/* ===== SUMMARY UPDATE ===== */
+function updateSummary() {
+  const summary = document.getElementById("summary");
+  if (currentLine && lastCount !== null) {
+    summary.innerHTML = `<b>Material:</b> ${material}<br><b>Last Count:</b> ${lastCount}`;
+  } else {
+    summary.innerHTML = "<small>Waiting for run...</small>";
+  }
+}
+
+/* ===== ADD / DELETE LINE ===== */
+async function addLine() {
   const name = document.getElementById("newLine").value.trim();
   if (!name) return alert("Enter a line name");
   currentLine = name;
   document.getElementById("newLine").value = "";
-  promptAndSend({
+
+  const entry = {
     date: new Date().toDateString(),
     time: "Init",
     material: "-",
     count: 0,
     diff: 0,
     line: currentLine
-  });
+  };
+
+  await sendToServer(entry, false, currentLine, "add", true);
 }
 
-function deleteLine() {
+async function deleteLine() {
   if (!currentLine) return alert("Select a line first");
   if (!confirm(`Delete line "${currentLine}"?`)) return;
-  promptAndSend({}, true, currentLine, "delete");
+
+  await sendToServer({}, true, currentLine, "delete", true);
+
   currentLine = "";
+  lastCount = null; material = ""; runStartTime = null;
+  updateSummary();
   document.getElementById("log").innerHTML = "";
   document.getElementById("lastRun").innerHTML = "<small>No previous run</small>";
 }
 
-function startRun() {
+/* ===== START RUN ===== */
+async function startRun() {
   if (!currentLine) return alert("Select a line first");
-  material = materialInput.value;
+  material = materialInput.value.trim();
   lastCount = parseInt(startCountInput.value);
   if (!material || isNaN(lastCount)) return alert("Invalid setup");
   runStartTime = new Date();
-  if (!lastRun[currentLine]) lastRun[currentLine] = {};
-  lastRun[currentLine].material = material;
-  lastRun[currentLine].count = lastCount;
-  lastRun[currentLine].start = runStartTime;
-  promptAndSend({
+
+  const entry = {
     date: new Date().toDateString(),
     time: "Start",
     material,
     count: lastCount,
     diff: 0,
     line: currentLine
-  });
-  document.getElementById("summary").innerHTML =
-    `<b>Material:</b> ${material}<br><b>Last Count:</b> ${lastCount}`;
+  };
+
+  await sendToServer(entry, false, currentLine, "add", true);
+  updateSummary();
 }
 
+/* ===== ADD ENTRY ===== */
+async function addEntry() {
+  if (!currentLine || lastCount === null) return alert("Start a run first");
+  const time = timeInput.value.trim();
+  const count = parseInt(countInput.value);
+  if (!time || isNaN(count)) return alert("Invalid entry");
+
+  const diff = count - lastCount;
+  const entry = {
+    date: new Date().toDateString(),
+    time,
+    material,
+    count,
+    diff,
+    line: currentLine
+  };
+
+  const data = await sendToServer(entry, false, currentLine, "add", true);
+  if (!data.error) {
+    lastCount = count;
+    updateSummary();
+    timeInput.value = "";
+    countInput.value = "";
+  }
+}
+
+/* ===== END RUN ===== */
 async function endRun() {
   if (!runStartTime) return alert("No active run");
-  const password = prompt("Enter password:");
-  if (password !== "tyvek") return alert("Wrong password");
-  const res = await fetch(`${SERVER_URL}/add`, {
-    method: "POST",
-    headers: { "Content-Type": "application/json" },
-    body: JSON.stringify({ entry: {}, reset: false, line: currentLine, action: "endrun", password })
-  });
-  const data = await res.json();
-  if (data.last_run) {
+
+  const data = await sendToServer({}, false, currentLine, "endrun", true);
+
+  if (!data.error && data.last_run) {
+    const lr = data.last_run;
     lastRun[currentLine] = {
-      material: data.last_run.material,
-      count: data.last_run.count,
-      start: new Date(data.last_run.start),
-      end: new Date(data.last_run.end)
+      material: lr.material,
+      count: lr.count,
+      start: new Date(lr.start),
+      end: new Date(lr.end)
     };
-    const lr = lastRun[currentLine];
+    const l = lastRun[currentLine];
     document.getElementById("lastRun").innerHTML = `
-      <b>Material:</b> ${lr.material}<br>
-      <b>Last Count:</b> ${lr.count}<br>
-      <b>Start:</b> ${lr.start.toLocaleString()}<br>
-      <b>End:</b> ${lr.end.toLocaleString()}
+      <b>Material:</b> ${l.material}<br>
+      <b>Last Count:</b> ${l.count}<br>
+      <b>Start:</b> ${l.start.toLocaleString()}<br>
+      <b>End:</b> ${l.end.toLocaleString()}
     `;
   }
-  material = ""; lastCount = null; runStartTime = null;
-  document.getElementById("summary").innerHTML = "<small>Waiting for run...</small>";
-  loadLog();
+
+  lastCount = null; material = ""; runStartTime = null;
+  updateSummary();
 }
 
-function addEntry() {
-  if (!currentLine || lastCount === null) return alert("Start a run first");
-  const time = timeInput.value; const count = parseInt(countInput.value);
-  if (!time || isNaN(count)) return;
-  const diff = count - lastCount; lastCount = count;
-  if (!lastRun[currentLine]) lastRun[currentLine] = {};
-  lastRun[currentLine].count = lastCount;
-  promptAndSend({
-    date: new Date().toDateString(),
-    time, material, count, diff, line: currentLine
-  });
-  timeInput.value = ""; countInput.value = "";
-  document.getElementById("summary").innerHTML =
-    `<b>Material:</b> ${material}<br><b>Last Count:</b> ${lastCount}`;
-}
-
+/* ===== DISPLAY LOG ===== */
 function displayLog(data = []) {
-  const logDiv = document.getElementById("log"); logDiv.innerHTML = "";
+  const logDiv = document.getElementById("log");
+  logDiv.innerHTML = "";
   if (!currentLine) return;
+
   data.filter(e => e.line === currentLine && !e.last_run).forEach(e => {
     const d = document.createElement("div");
     d.className = "log-entry";
@@ -214,11 +303,13 @@ function displayLog(data = []) {
   });
 }
 
+/* ===== LAST RUN INFO ===== */
 function updateLastRunInfo(data = []) {
   if (!currentLine) {
     document.getElementById("lastRun").innerHTML = "<small>No previous run</small>";
     return;
   }
+
   const lastRunEntry = data.find(e => e.line === currentLine && e.last_run);
   if (lastRunEntry) {
     const lr = lastRunEntry.last_run;
@@ -229,6 +320,7 @@ function updateLastRunInfo(data = []) {
       end: new Date(lr.end)
     };
   }
+
   if (lastRun[currentLine]) {
     const lr = lastRun[currentLine];
     document.getElementById("lastRun").innerHTML = `
@@ -242,19 +334,10 @@ function updateLastRunInfo(data = []) {
   }
 }
 
-async function promptAndSend(entry, reset = false, line = "", action = "add") {
-  const password = prompt("Enter password:");
-  if (password !== "tyvek") return alert("Wrong password");
-  await fetch(`${SERVER_URL}/add`, {
-    method: "POST",
-    headers: { "Content-Type": "application/json" },
-    body: JSON.stringify({ entry, reset, line: line || currentLine, action, password })
-  });
-  loadLog();
-}
-
-loadLog(); setInterval(loadLog, 10000);
+/* ===== INIT ===== */
+loadLog();
+setInterval(loadLog, 5000); // refresh log every 5 seconds
 </script>
+
 </body>
 </html>
-
